调整登录和授权文档格式修改相关错别字

--- a/note/03-登录和第三方授权.md
+++ b/note/03-登录和第三方授权.md
@@ -103,6 +103,6 @@
 > }
 > ```
 >
-> **用法：**`access token`有实效时间，在它失效后，调用`refresh token`接口，并传入`refresh token`来获取新的`access token`
+> **用法：**`access token`有失效时间，在它失效后，调用`refresh token`接口，并传入`refresh token`来获取新的`access token`
 >
-> **目的：**安全，当access token失窃时，由于它有实效时间，因此坏人只有较短的时间来做坏事；同时，由于(在标准的OAuth2流程中) refresh token永远只存在于第三方服务的服务器中，因此refresh token几乎没有失窃的风险
+> **目的：** 安全，当access token失窃时，由于它有实效时间，因此坏人只有较短的时间来做坏事；同时，由于(在标准的OAuth2流程中) refresh token永远只存在于第三方服务的服务器中，因此refresh token几乎没有失窃的风险
