Kotlin协程：runBlock，GlobalScope.launch()，CoroutineScope().launch(),sync{} Java多线程：Thread，Runnable，ThreadFactory，ExecutorService，Callable，Future 线程同步：synchronize锁(资源互斥访问)，volatile，Atomic包，Lock，ReentrantReadWriteLock(读写锁)，核心是保证资源的访问限制

--- a/22_thread/多线程以及线程同步.md
+++ b/22_thread/多线程以及线程同步.md
@@ -19,7 +19,7 @@ CPU线程：
 
 ##### 线程是什么
 - 按代码顺序执行下来，执行完毕就结束的一条线
-- UI线程为什么不会结束？因为它在初始化完毕后悔执行死循环，循环的内容是刷线界面
+- UI线程为什么不会结束？因为它在初始化完毕后会执行死循环，循环的内容是刷线界面
 
 
 ### 多线程的使用
